--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
 		</dependency>
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-all</artifactId>
+    <version>1.10.19</version>
+    <scope>test</scope>
+</dependency>
 	</dependencies>
 
 	<build>
